Split packages for triton api
