# main.go
@@ -3,6 +3,7 @@ package main
 import (
 	"context"
 	_ "echo-grpc-triton/docs" // docs is generated by Swag CLI, you have to import it.
+	triton "echo-grpc-triton/tritonserver"
 	"flag"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
@@ -24,7 +25,7 @@ type Flags struct {
 
 // Contexts that is necessary to communicate with Triton
 type Client struct {
-	grpc GRPCInferenceServiceClient
+	grpc triton.GRPCInferenceServiceClient
 }
 
 // Global variables
@@ -45,7 +46,7 @@ func (client *Client) connectToTriton(url string) {
 	if err != nil {
 		log.Fatalf("couldn't connect to endpoint %s: %v", url, err)
 	}
-	client.grpc = NewGRPCInferenceServiceClient(conn)
+	client.grpc = triton.NewGRPCInferenceServiceClient(conn)
 }
 
 // @title        Triton API Server with Triton gRPC Client
@@ -99,7 +100,7 @@ func getServerLiveness(c echo.Context) error {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(flags.TIMEOUT)*time.Second)
 	defer cancel()
 
-	serverLiveRequest := ServerLiveRequest{}
+	serverLiveRequest := triton.ServerLiveRequest{}
 	serverLiveResponse, err := client.grpc.ServerLive(ctx, &serverLiveRequest)
 	if err != nil {
 		return err
@@ -117,7 +118,7 @@ func getServerReadiness(c echo.Context) error {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(flags.TIMEOUT)*time.Second)
 	defer cancel()
 
-	serverReadyRequest := ServerReadyRequest{}
+	serverReadyRequest := triton.ServerReadyRequest{}
 	serverReadyResponse, err := client.grpc.ServerReady(ctx, &serverReadyRequest)
 	if err != nil {
 		return err
@@ -129,15 +130,15 @@ func getServerReadiness(c echo.Context) error {
 // @Description It returns the requested model metadata
 // @Accept      json
 // @Produce     json
-// @Param       model   query    string                true  "model name"
-// @Param       version query    string                false "model version"
-// @Success     200     {object} ModelMetadataResponse "Triton server's model metadata"
+// @Param       model   query    string                       true  "model name"
+// @Param       version query    string                       false "model version"
+// @Success     200     {object} triton.ModelMetadataResponse "Triton server's model metadata"
 // @Router      /model-metadata [get]
 func getModelMetadata(c echo.Context) error {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(flags.TIMEOUT)*time.Second)
 	defer cancel()
 
-	modelMetadataRequest := ModelMetadataRequest{Name: c.QueryParam("model"), Version: c.QueryParam("version")}
+	modelMetadataRequest := triton.ModelMetadataRequest{Name: c.QueryParam("model"), Version: c.QueryParam("version")}
 	modelMetadataResponse, err := client.grpc.ModelMetadata(ctx, &modelMetadataRequest)
 	if err != nil {
 		return err
@@ -149,15 +150,15 @@ func getModelMetadata(c echo.Context) error {
 // @Description It returns the requested model's inference statistics.
 // @Accept      json
 // @Produce     json
-// @Param       model   query    string                  true  "model name"
-// @Param       version query    string                  false "model version"
-// @Success     200     {object} ModelStatisticsResponse "Triton server's model statistics"
+// @Param       model   query    string                         true  "model name"
+// @Param       version query    string                         false "model version"
+// @Success     200     {object} triton.ModelStatisticsResponse "Triton server's model statistics"
 // @Router      /model-stats [get]
 func getModelInferStats(c echo.Context) error {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(flags.TIMEOUT)*time.Second)
 	defer cancel()
 
-	modelStatisticsRequest := ModelStatisticsRequest{Name: c.QueryParam("model"), Version: c.QueryParam("version")}
+	modelStatisticsRequest := triton.ModelStatisticsRequest{Name: c.QueryParam("model"), Version: c.QueryParam("version")}
 	modelStatisticsResponse, err := client.grpc.ModelStatistics(ctx, &modelStatisticsRequest)
 	if err != nil {
 		return err
@@ -169,14 +170,14 @@ func getModelInferStats(c echo.Context) error {
 // @Description It requests to load a model. This is only allowed when polling is enabled.
 // @Accept      json
 // @Produce     json
-// @Param       model query    string                      true "model name"
-// @Success     200   {object} RepositoryModelLoadResponse "Triton server's model load response"
+// @Param       model query    string                             true "model name"
+// @Success     200   {object} triton.RepositoryModelLoadResponse "Triton server's model load response"
 // @Router      /model-load [post]
 func loadModel(c echo.Context) error {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(flags.TIMEOUT)*time.Second)
 	defer cancel()
 
-	modelLoadRequest := RepositoryModelLoadRequest{ModelName: c.QueryParam("model")}
+	modelLoadRequest := triton.RepositoryModelLoadRequest{ModelName: c.QueryParam("model")}
 	modelLoadResponse, err := client.grpc.RepositoryModelLoad(ctx, &modelLoadRequest)
 	if err != nil {
 		return err
@@ -188,14 +189,14 @@ func loadModel(c echo.Context) error {
 // @Description It requests to unload a model. This is only allowed when polling is enabled.
 // @Accept      json
 // @Produce     json
-// @Param       model query    string                        true "model name"
-// @Success     200   {object} RepositoryModelUnloadResponse "Triton server's model unload response"
+// @Param       model query    string                               true "model name"
+// @Success     200   {object} triton.RepositoryModelUnloadResponse "Triton server's model unload response"
 // @Router      /model-unload [post]
 func unloadModel(c echo.Context) error {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(flags.TIMEOUT)*time.Second)
 	defer cancel()
 
-	modelUnloadRequest := RepositoryModelUnloadRequest{ModelName: c.QueryParam("model")}
+	modelUnloadRequest := triton.RepositoryModelUnloadRequest{ModelName: c.QueryParam("model")}
 	modelUnloadResponse, err := client.grpc.RepositoryModelUnload(ctx, &modelUnloadRequest)
 	if err != nil {
 		return err
@@ -207,10 +208,10 @@ func unloadModel(c echo.Context) error {
 // @Description It outputs a single bytes with a single bytes input.
 // @Accept      json
 // @Produce     json
-// @Param       model   formData string             true  "model name"
-// @Param       file    formData file               true  "input"
-// @Param       version formData string             false "model version"
-// @Success     200     {object} ModelInferResponse "Triton server's inference response"
+// @Param       model   formData string                    true  "model name"
+// @Param       file    formData file                      true  "input"
+// @Param       version formData string                    false "model version"
+// @Success     200     {object} triton.ModelInferResponse "Triton server's inference response"
 // @Router      /infer [post]
 func infer(c echo.Context) error {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(flags.TIMEOUT)*time.Second)
@@ -237,11 +238,11 @@ func infer(c echo.Context) error {
 
 	// Create request input / output tensors
 	size := int64(len(rawInput))
-	inferInputs := []*ModelInferRequest_InferInputTensor{{Name: "INPUT", Datatype: "UINT8", Shape: []int64{size}}}
-	inferOutputs := []*ModelInferRequest_InferRequestedOutputTensor{{Name: "OUTPUT"}}
+	inferInputs := []*triton.ModelInferRequest_InferInputTensor{{Name: "INPUT", Datatype: "UINT8", Shape: []int64{size}}}
+	inferOutputs := []*triton.ModelInferRequest_InferRequestedOutputTensor{{Name: "OUTPUT"}}
 
 	// Create a request
-	modelInferRequest := ModelInferRequest{
+	modelInferRequest := triton.ModelInferRequest{
 		ModelName:        modelName,
 		ModelVersion:     modelVersion,
 		Inputs:           inferInputs,
